Correction of producers routes #12
- registerProducer looking for a cookie that didn't exist now fixed
- Error in converting a string pointer to string in registerProducer
- Unnecessary CORS config in auth middleware removed
- Correction of doc to correspond with corrections
- Added check if username already in produceurs table before creating it
- Various model's json description not corresponding with model
  attributes now fixed (JSON marshall works properly now)
